# graphix-stim-backend

./: LICENSE  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  ruff.yml  typecheck.yml
graphix_stim_backend/: __init__.py  graphix_stim_backend.py  single_pauli_noise_model.py
tests/: __init__.py  conftest.py  test_graphix_stim_backend.py
